// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LedgerConnectionStep should emit event on connect 1`] = `
<div>
  <section
    class="space-y-8"
    data-testid="LedgerConnectionStep"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-4xl"
          data-testid="header__title"
        >
          Opening of the app
        </h1>
        <div
          class="text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Information from your device is expected
        </div>
      </div>
    </div>
    <fieldset
      class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
    >
      <label
        class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
        data-testid="FormLabel"
        for="network"
      >
        Cryptoasset
        <div
          class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
          data-testid="FormLabel__required"
        />
      </label>
      <div>
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-owns="ImportWallet__network-menu"
          data-testid="SelectNetwork"
          role="combobox"
        >
          <label
            for="ImportWallet__network-input"
            id="ImportWallet__network-label"
          />
          <div
            class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD"
            data-testid="SelectNetworkInput"
          >
            <div
              class="InputGroup__InputAddonStyle-sc-1obbdqe-0 InputGroup__InputAddonStartStyle-sc-1obbdqe-1 epSJiV gnQfLB px-4"
            >
              <div
                aria-label="ARK Devnet"
                class="Circle-uw7h4j-0 blBpcG border-theme-primary-100 text-theme-primary-400"
                data-testid="SelectNetworkInput__network"
              >
                <div
                  class="sc-bdfBwQ iyevwF"
                  data-testid="NetworkIcon__icon"
                  height="20"
                  width="20"
                >
                  <svg>
                    ark.svg
                  </svg>
                </div>
              </div>
            </div>
            <input
              aria-autocomplete="list"
              aria-controls="ImportWallet__network-menu"
              aria-labelledby="ImportWallet__network-label"
              autocomplete="off"
              class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures pl-15"
              data-testid="SelectNetworkInput__input"
              disabled=""
              id="ImportWallet__network-input"
              placeholder="Enter a cryptoasset name"
              value=""
            />
          </div>
        </div>
        <div
          class=""
        >
          <ul
            aria-labelledby="ImportWallet__network-label"
            class="grid grid-cols-6 gap-3"
            id="ImportWallet__network-menu"
            role="listbox"
          />
        </div>
      </div>
    </fieldset>
    <div
      class="flex overflow-hidden flex-col space-y-4 rounded-lg p-4 bg-theme-success-50 dark:bg-theme-secondary-800 sm:space-y-0 sm:space-x-4 sm:flex-row sm:items-center"
    >
      <div
        class="h-11 w-11 flex flex-shrink-0 items-center justify-center rounded-lg text-white bg-theme-success-600"
      >
        <div
          class="sc-bdfBwQ hteSKx"
          height="1.25em"
          width="1.25em"
        >
          <svg>
            alert-success.svg
          </svg>
        </div>
      </div>
      <div
        class="flex flex-col"
      >
        <p
          class="text-sm leading-relaxed break-words dark:text-theme-secondary-500"
        >
          Successfully connected
        </p>
      </div>
    </div>
  </section>
</div>
`;

exports[`LedgerConnectionStep should emit event on fail 1`] = `
<div>
  <section
    class="space-y-8"
    data-testid="LedgerConnectionStep"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-4xl"
          data-testid="header__title"
        >
          Opening of the app
        </h1>
        <div
          class="text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Information from your device is expected
        </div>
      </div>
    </div>
    <fieldset
      class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
    >
      <label
        class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
        data-testid="FormLabel"
        for="network"
      >
        Cryptoasset
        <div
          class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
          data-testid="FormLabel__required"
        />
      </label>
      <div>
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-owns="ImportWallet__network-menu"
          data-testid="SelectNetwork"
          role="combobox"
        >
          <label
            for="ImportWallet__network-input"
            id="ImportWallet__network-label"
          />
          <div
            class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD"
            data-testid="SelectNetworkInput"
          >
            <div
              class="InputGroup__InputAddonStyle-sc-1obbdqe-0 InputGroup__InputAddonStartStyle-sc-1obbdqe-1 epSJiV gnQfLB px-4"
            >
              <div
                aria-label="ARK Devnet"
                class="Circle-uw7h4j-0 blBpcG border-theme-primary-100 text-theme-primary-400"
                data-testid="SelectNetworkInput__network"
              >
                <div
                  class="sc-bdfBwQ iyevwF"
                  data-testid="NetworkIcon__icon"
                  height="20"
                  width="20"
                >
                  <svg>
                    ark.svg
                  </svg>
                </div>
              </div>
            </div>
            <input
              aria-autocomplete="list"
              aria-controls="ImportWallet__network-menu"
              aria-labelledby="ImportWallet__network-label"
              autocomplete="off"
              class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures pl-15"
              data-testid="SelectNetworkInput__input"
              disabled=""
              id="ImportWallet__network-input"
              placeholder="Enter a cryptoasset name"
              value=""
            />
          </div>
        </div>
        <div
          class=""
        >
          <ul
            aria-labelledby="ImportWallet__network-label"
            class="grid grid-cols-6 gap-3"
            id="ImportWallet__network-menu"
            role="listbox"
          />
        </div>
      </div>
    </fieldset>
    <div
      class="flex overflow-hidden flex-col space-y-4 rounded-lg p-4 bg-theme-danger-50 dark:bg-theme-secondary-800 sm:space-y-0 sm:space-x-4 sm:flex-row sm:items-center"
    >
      <div
        class="h-11 w-11 flex flex-shrink-0 items-center justify-center rounded-lg text-white bg-theme-danger-400"
      >
        <div
          class="sc-bdfBwQ hteSKx"
          height="1.25em"
          width="1.25em"
        >
          <svg>
            alert-danger.svg
          </svg>
        </div>
      </div>
      <div
        class="flex flex-col"
      >
        <p
          class="text-sm leading-relaxed break-words dark:text-theme-secondary-500"
        >
          Failed
        </p>
      </div>
    </div>
  </section>
</div>
`;
